Fixed memory leaks when removing a QGraphicsEffect from a QGraphicsItem or QWidget with setGraphicsEffect(0).

The effect was not deleted in that case, problem solved for both QGraphicsItem
and QWidget.

Autotest included.

Task-number: QTBUG-5917
Reviewed-by: bnilsen